<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/pause"
        android:maxHeight="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <ImageButton
            android:id="@+id/queen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/queen"
            android:scaleType="centerInside">

        </ImageButton>

        <ImageButton
            android:id="@+id/rook"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/rook"
            android:scaleType="centerInside">

        </ImageButton>

        <ImageButton
            android:id="@+id/bishop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/bishop"
            android:scaleType="centerInside">

        </ImageButton>

        <ImageButton
            android:id="@+id/knight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/knight"
            android:scaleType="centerInside">

        </ImageButton>

    </LinearLayout>
</FrameLayout>