<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="40dp"
    android:layout_marginStart="40dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/pause"
        android:maxHeight="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"

        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/game_is_paused"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/send_message_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/send_message"
                android:scaleType="centerInside"
                android:src="@drawable/send_message" />

            <Button
                android:id="@+id/resume_game_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/send_message"
                android:text="@string/resume" />

            <ImageButton
                android:id="@+id/open_logs_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/open_logs"
                android:scaleType="centerInside"
                android:src="@drawable/open_logs" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>