<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/pause"
        android:maxHeight="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/select_game_type"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF">

        </TextView>

        <LinearLayout
            android:layout_below="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/online_game"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/online_game"
                android:scaleType="centerInside"
                android:src="@drawable/online_game">

            </ImageButton>

            <ImageButton
                android:id="@+id/lan_game"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/lan_game"
                android:scaleType="centerInside"
                android:src="@drawable/peer2peer_game">

            </ImageButton>

            <ImageButton
                android:id="@+id/one_device_game"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/one_device"
                android:scaleType="centerInside"
                android:src="@drawable/one_device_game">

            </ImageButton>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>