<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/connection_state_changed"
        android:maxHeight="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/background" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/connect_to_peer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/device_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/device_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:background="?attr/selectableItemBackground"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_connect"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/accept" />
            <Button
                android:background="?attr/selectableItemBackground"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_disconnect"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/decline" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
